src/tests/binary-operators/16.txt
binary-operators/16.c:2:5: error: invalid operands to binary '-' (have 'char *' and 'char')
     "a" - 'B';
     ^
